--- a/setup.cfg
+++ b/setup.cfg
@@ -3,14 +3,15 @@ name = flask_ishuman
 version = attr: flask_ishuman.__version__
 author = Ari Archer
 author_email = ari.web.xyz@gmail.com
-url = https://ari-web.xyz/gh/flask_ishuman
-description = ...
+url = https://ari-web.xyz/gh/flask-ishuman
+description = simple flask app captcha validation
 long_description = file: README.md
 long_description_content_type = text/markdown
-keywords = ...
+keywords = flask, captcha, recaptcha, audio captcha, image captcha, human validation
 license = GPLv3+
 classifiers =
     Development Status :: 5 - Production/Stable
+    Environment :: Web Environment
     Intended Audience :: Developers
     License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
     Operating System :: OS Independent
@@ -21,6 +22,7 @@ classifiers =
     Programming Language :: Python :: 3.12
     Topic :: Internet :: WWW/HTTP
     Topic :: Software Development :: Libraries :: Python Modules
+    Topic :: Security
     Typing :: Typed
 
 [options]
