--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = attr: flask_ishuman.__version__
 author = Ari Archer
 author_email = ari.web.xyz@gmail.com
 url = https://ari-web.xyz/gh/flask-ishuman
-description = simple flask app captcha validation
+description = simple flask captcha validation
 long_description = file: README.md
 long_description_content_type = text/markdown
 keywords = flask, captcha, recaptcha, audio captcha, image captcha, human validation
@@ -20,6 +20,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     Topic :: Internet :: WWW/HTTP
     Topic :: Software Development :: Libraries :: Python Modules
     Topic :: Security
